Add new field key to categories for order
Former-commit-id: cd11db0e73e337c7f56964a4ffcafe724b72e3dd

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -227,6 +227,7 @@ boton.enviar                   = Enviar
 boton.evolucion                = Evoluci\u00F3n
 boton.evolucion.alt            = Evoluci\u00F3n
 boton.exportar                 = Exportar
+boton.limpiar                  = Limpiar
 boton.modificar                = Modificar
 boton.regenerar.resultados     = Regenerar resultados
 boton.regenerar.resultados.alt = Regenerar resultados
@@ -263,11 +264,13 @@ cargar.semilla.inalterables.title            = Inalteradas
 cargar.semilla.nuevas.title                  = Nuevas
 cargar.semilla.observatorio.acronimo         = Acr\u00F3nimo
 cargar.semilla.observatorio.activa           = Activa
+cargar.semilla.observatorio.ambito           = \u00C1mbito
 cargar.semilla.observatorio.categoria        = Segmento
 cargar.semilla.observatorio.complejidad      = Complejidad
 cargar.semilla.observatorio.dependencia      = Dependencia
 cargar.semilla.observatorio.directorio       = Directorio
 cargar.semilla.observatorio.eliminada        = Eliminada
+cargar.semilla.observatorio.etiquetas        = Etiquetas
 cargar.semilla.observatorio.exportar.todo    = Exportar
 cargar.semilla.observatorio.importar.todo    = Importar
 cargar.semilla.observatorio.nombre           = Nombre
@@ -341,8 +344,6 @@ chart.problems.bs                            = Problemas
 chart.warnings                               = Advertencias
 chart.warnings.bs                            = Advertencias
 
-check.491.regex.pattern = \\bprocedimiento de aplicaci\u00F3n\\b,\\bprocediment d'aplicaci\u00F3\\b,\\baplikazioa\\b,\\bprocedemento de aplicaci\u00F3n\\b,\\benforcement procedure\\b,\\bproc\u00E9dure permettant d'assurer le respect des dispositions\\b\n
-
 client.accounts.info = Estos son las cuentas clientes a las que est\u00E1 suscrito:
 
 conectividad.form.title            = Comprobaci\u00F3n de URL
@@ -357,6 +358,9 @@ conectividad.title                 = Comprobaciones de conectividad
 conectividad.url.comprobada        = URL comprobada
 conectividad.url.comprobada.estado = Estado
 conectividad.url.vacia.error       = Debe introducir una URL
+
+configurar.agregado.info  = Configure los filtros para generar el informe agregado
+configurar.agregado.title = Configurar informe agregado
 
 confirmacion.borrar.cartucho                              = Eliminar Cartucho
 confirmacion.borrar.cartucho.aplicacion                   = Aplicaci\u00F3n: 
@@ -402,7 +406,7 @@ confirmacion.relanzar.observatorio.pregunta               = \u00BFEst\u00E1 segu
 confirmar.borrar.certificado      = Confirmaci\u00F3n de borrado de certificado.
 confirmar.borrar.certificado.info = Si est\u00E1 seguro de que quiere eliminar este certificado, por favor, conf\u00EDrmelo a continuaci\u00F3n.
 
-copyright = Copyright \u00A9 2020 - <span class="negrita">Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica</span>
+copyright = Copyright \u00A9 2020 - <span class="negrita">Vicepresidencia Tercera del Gobierno - Ministerio de Asuntos Econ\u00F3micos y Transformaci\u00F3n Digital</span>
 
 cuenta.cliente.duplicada = Cuenta Cliente ya existente.
 
@@ -515,6 +519,7 @@ error.cartucho.instalacion               = Errores durante la Instalaci\u00F3n
 error.cartuchoo                          = Cartucho
 error.cartuchos                          = Cartuchos
 error.categorizacion                     = Categorizaci\u00F3n
+error.clasificacion                      = Clasificacion
 error.complejidad                        = Complejidad
 error.confidence                         = Confianza
 error.confirmacion.password              = Confirmar Password
@@ -649,8 +654,14 @@ generar.informes.observatorio.tiempo_espera = El proceso de generaci\u00F3n de t
 generar.informes.observatorio.title         = Generar informes PDFs del observatorio
 
 gestion.certificado                         = Gesti\u00F3n de Certificados
+gestion.complejidades.observatorio          = Gesti\u00F3n de Complejidades del Observatorio
+gestion.complejidades.observatorio.titulo   = Gesti\u00F3n de Complejidades del Observatorio
 gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del Observatorio
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
+gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
+gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
+gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
+gestion.reducirtablas.observatorio.titulo   = Reducci\u00F3n de Tablas del Observatorio
 gestion.resultados.observatorio             = Resultados Observatorio
 gestion.resultados.observatorio.ejecuciones = Listado de Ejecuciones del Observatorio
 gestion.semillas                            = Gesti\u00F3n de Semillas
@@ -898,6 +909,8 @@ maximo.rastreos = El n\u00FAmero m\u00E1ximo de rastreos del cartucho ha sido su
 mensaje.certificado.ya.registrado                             = El certificado digital ya estaba registrado o la p\u00E1gina es accesible a trav\u00E9s del puerto HTTP normal.
 mensaje.error.campos.complejidad.numericos                    = Profundidad y amplitud deben ser n\u00FAmeros positivos
 mensaje.error.cartucho                                        = Se ha creado la cuenta cliente pero han fallado la creaci\u00F3n de los rastreos: {0}
+mensaje.error.documento.plantilla.formato                     = Formato no va\u013Aido. S\u00F3lo de admiten ficheros ODT
+mensaje.error.documento.plantilla.obligatorio                 = El documento de la plantilla es obligatorio
 mensaje.error.fichero.corrupto                                = El fichero al que est\u00E1 intentando acceder no est\u00E1 disponible o est\u00E1 corrupto. Por favor, proceda a subir un nuevo fichero.
 mensaje.error.generico                                        = No se ha podido realizar la acci\u00F3n seleccionada. Si el problema persiste, pongase en contacto con el administrador del sitio.
 mensaje.error.no.login                                        = No se ha identificado en el sistema, o su sesi\u00F3n ha caducado. Por favor, identif\u00EDquese en el formulario que se muestra a continuaci\u00F3n.
@@ -909,6 +922,8 @@ mensaje.error.nombre.dependencia.duplicado                    = Nombre de depend
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
 mensaje.error.nombre.etiqueta.duplicado                       = Nombre de etiqueta ya existente
 mensaje.error.nombre.etiqueta.obligatorio                     = El nombre de la etiqueta es obligatorio
+mensaje.error.nombre.plantilla.duplicado                      = Ya existe una plantilla con el mismo nombnre
+mensaje.error.nombre.plantilla.obligatorio                    = El nombre de la plantilla es obligatorio
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -947,6 +962,8 @@ mensaje.exito.observatorio.realizado.eliminado                = Ejecuci\u00F3n d
 mensaje.exito.observatorio.resultados.exportados              = Los resultados del Observatorio han sido exportados con \u00E9xito.
 mensaje.exito.pass.admin.cambiado                             = Password del usuario {0} cambiado.
 mensaje.exito.pass.usuario.cambiado                           = Password del Usuario cambiado.
+mensaje.exito.plantilla.eliminada                             = Plantilla eliminada correctamente
+mensaje.exito.plantilla.generada                              = Plantilla guardada correctamente
 mensaje.exito.rastreo.editado                                 = Rastreo Editado con exito. 
 mensaje.exito.rastreo.eliminado                               = Rastreo Eliminado con exito. 
 mensaje.exito.rastreo.insertado                               = Rastreo Insertado con exito. 
@@ -982,7 +999,9 @@ menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
 menu.config.observatory.title                 = Observatorio
+menu.config.plantillas                        = Plantillas
 menu.config.plantillas.title                  = Plantillas asociadas a semillas
+menu.config.reducirtablas                     = Reduccion de tablas
 menu.config.reducirtablas.title               = Reduccion tablas observatorio
 
 menuSemillas.gestion.semillas  = Gesti\u00F3n de Semillas
@@ -1097,6 +1116,7 @@ migas.eliminar.termino.categoria                         = Eliminar T\u00E9rmino
 migas.eliminar.usuario                                   = Eliminar Usuario
 migas.error                                              = Error
 migas.establecer.valores.cartucho                        = Establecer Valores Cartucho
+migas.estado.observatorio                                = Estado del observatorio
 migas.etiquetas.observatorio                             = Etiquetas
 migas.exportar                                           = Exportar resultados
 migas.graficas                                           = Gr\u00E1ficas
@@ -1158,6 +1178,7 @@ migas.modificar.cuenta.cliente                           = Modificar Cuenta Clie
 migas.modificar.observatorio                             = Modificar Observatorio
 migas.modificar.rastreo                                  = Modificar Rastreo
 migas.nueva.categoria                                    = Nuevo Segmento
+migas.nueva.complejidad.observatorio                     = Nueva complejidad
 migas.nueva.cuenta.cliente                               = Nueva Cuenta Cliente
 migas.nueva.dependencia.observatorio                     = Nueva dependencia
 migas.nueva.semilla.google                               = Nueva Semilla Google
@@ -1174,6 +1195,7 @@ migas.nuevo.usuario                                      = Nuevo Usuario
 migas.nuevo.usuario.cliente                              = Nuevo Usuario Cliente
 migas.nuevo.usuario.observatorio                         = Nuevo Usuario Observatorio
 migas.observatorio                                       = Observatorios
+migas.plantillas.observatorio                            = Plantillas
 migas.rangoIp                                            = Rango IP
 migas.rastreo                                            = Rastreos
 migas.rastreo.editar.semilla                             = Editar Semilla
@@ -1395,6 +1417,9 @@ nueva.etiqueta.observatorio.distribucion   = Distribucion
 nueva.etiqueta.observatorio.nombre         = Nombre de la etiqueta
 nueva.etiqueta.observatorio.recurrencia    = Recurrencia
 nueva.etiqueta.observatorio.tematica       = Tematica
+nueva.plantilla.observatorio               = Nueva plantilla
+nueva.plantilla.observatorio.fichero       = Fichero ODT
+nueva.plantilla.observatorio.nombre        = Nombre de la plantilla
 nueva.semilla.google                       = Nueva semilla
 nueva.semilla.google.info                  = (Se extraer\u00E1n 10 resultados por cada p\u00E1gina)
 nueva.semilla.google.nombreSemilla         = Nombre de la Semilla:
@@ -1439,6 +1464,7 @@ nueva.semilla.webs.title                   = Listado de Webs
 
 nuevo.observatorio                            = Nuevo Observatorio
 nuevo.observatorio.activo                     = Activo
+nuevo.observatorio.ambito                     = \u00C1mbito
 nuevo.observatorio.amplitud                   = Amplitud
 nuevo.observatorio.cartucho                   = Cartucho
 nuevo.observatorio.categoria                  = Segmento asociado
@@ -2800,13 +2826,25 @@ rastreo.realizado.busqueda.fecha.fin    = Fecha Fin
 rastreo.realizado.busqueda.fecha.inicio = Fecha Inicio
 rastreo.realizado.busqueda.semilla      = Semilla 
 
-report.config.title                              = T\u00EDtulo del informe
-report.config.title.default                      = Informe de observatorio de accesibilidad web
-report.config.title.label                        = T\u00EDtulo del documento generado
-report.evolution.allocation.graphic.title.fixed  = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: en t\u00E9rminos fijos
-report.evolution.allocation.graphic.title.global = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
-report.evolution.compliance.graphic.title.fixed  = Evoluci\u00F3n de la Situaci\u00F3n de cumplimento estimado: en t\u00E9rminos fijos
-report.evolution.compliance.graphic.title.global = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: en t\u00E9rminos generales
+report.config.etiquetas.filter.info                = El filtrado de etiquetas se aplica como una consulta inclusiva. <br/>Por ejemplo, si se indican las etiquetas <em>ETIQUETA_1</em> y <em>ETIQUETA_2</em> se seleccionar\u00E1n los resultados de las semillas que tengan asociada la ETIQUETA_1 <mark>o</mark> la ETIQUETA_2 (o ambas)
+report.config.etiquetas.filter.title               = Filtrar por etiquetas
+report.config.graficas.filter.info                 = Seleccione las gr\u00E1ficas opcionales a incluir en el obervatorio
+report.config.graficas.filter.title                = Gr\u00E1ficas opcionales a incluir\n
+report.config.observatorios.filter.title           = Observatorios para incluir en el evolutivo 
+report.config.plantillas.filter.base               = Plantilla base
+report.config.plantillas.filter.complejidades      = Plantilla de la secci\u00F3n de complejidades
+report.config.plantillas.filter.complejidades.info = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>complexitysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. \n<br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
+report.config.plantillas.filter.segmentos          = Plantilla de la secci\u00F3n de segmentos
+report.config.plantillas.filter.segmentos.info     = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>categorysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. <br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
+report.config.plantillas.filter.title              = Plantillas a usar para generar el informe
+report.config.title                                = Configurar informe agregado
+report.config.title.default                        = Informe de observatorio de accesibilidad web
+report.config.title.label                          = T\u00EDtulo del documento generado
+report.config.title.title                          = T\u00EDtulo del informe
+report.evolution.allocation.graphic.title.fixed    = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: en t\u00E9rminos fijos
+report.evolution.allocation.graphic.title.global   = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
+report.evolution.compliance.graphic.title.fixed    = Evoluci\u00F3n de la Situaci\u00F3n de cumplimento estimado: en t\u00E9rminos fijos
+report.evolution.compliance.graphic.title.global   = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: en t\u00E9rminos generales
 
 resultado.observatorio.activo.alt                                = Activo
 resultado.observatorio.detalle.semilla.rastreo.title             = Detalle de Semilla
@@ -3044,10 +3082,24 @@ semillas.observatorio.title = Asociar Semillas a Observatorio
 send.numHilos    = N\u00FAmero de hilos
 send.numRastreos = N\u00FAmero de rastreos
 
-servicio.diagnostico.fecha.fin    = Fecha fin (incluida)
-servicio.diagnostico.fecha.inicio = Fecha inicio (incluida)
-servicio.diagnostico.fecha.legend = Rango de fechas de exportaci\u00F3n
-servicio.diagnostico.title        = Servicio de Diagn\u00F3stico
+servicio.diagnostico.estadisticas.amplitud         = Amplitud
+servicio.diagnostico.estadisticas.avg              = Tiempo medio de los an\u00E1lisis
+servicio.diagnostico.estadisticas.directorio       = En directorio
+servicio.diagnostico.estadisticas.email            = Email
+servicio.diagnostico.estadisticas.encurso.info     = Se muestran los an\u00E1lisis en estado "Lanzado" del d\u00EDa actual
+servicio.diagnostico.estadisticas.encurso.title    = An\u00E1lisis en curso
+servicio.diagnostico.estadisticas.estado           = Estado
+servicio.diagnostico.estadisticas.informe          = Informe
+servicio.diagnostico.estadisticas.profundidad      = Profundidad
+servicio.diagnostico.estadisticas.resultados.info  = El tipo de portal se indicar\u00E1 si la URL analizada en el servicio de diagn\u00F3stico coincide con alguna de las semillas almacenadas en base de datos. En caso contrario, se indicar\u00E1 como "Otros"
+servicio.diagnostico.estadisticas.resultados.title = Resultados de la b\u00FAsqueda
+servicio.diagnostico.estadisticas.tipo             = Tipo
+servicio.diagnostico.estadisticas.url              = URL
+servicio.diagnostico.estadisticas.usuario          = Usuario
+servicio.diagnostico.fecha.fin                     = Fecha fin (incluida)
+servicio.diagnostico.fecha.inicio                  = Fecha inicio (incluida)
+servicio.diagnostico.fecha.legend                  = Rango de fechas de exportaci\u00F3n
+servicio.diagnostico.title                         = Servicio de Diagn\u00F3stico
 
 sesion.activa          = Se ha producido otra sesi\u00F3n con su usuario.
 sesion.duplicadaconfig = Se ha producido otra sesi\u00F3n con su usuario configurador de su cartucho.
