--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -267,7 +267,8 @@ cargar.semilla.nuevas.title                  = Nuevas
 cargar.semilla.observatorio.acronimo         = Acr\u00F3nimo
 cargar.semilla.observatorio.activa           = Activa
 cargar.semilla.observatorio.ambito           = \u00C1mbito
-cargar.semilla.observatorio.categoria        = Segmento
+cargar.semilla.observatorio.categoria        = Nombre
+cargar.semilla.observatorio.clave            = Clave
 cargar.semilla.observatorio.complejidad      = Complejidad
 cargar.semilla.observatorio.dependencia      = Dependencia
 cargar.semilla.observatorio.directorio       = Directorio
@@ -408,7 +409,7 @@ confirmacion.relanzar.observatorio.pregunta               = \u00BFEst\u00E1 segu
 confirmar.borrar.certificado      = Confirmaci\u00F3n de borrado de certificado.
 confirmar.borrar.certificado.info = Si est\u00E1 seguro de que quiere eliminar este certificado, por favor, conf\u00EDrmelo a continuaci\u00F3n.
 
-copyright = Copyright \u00A9 2020 - <span class="negrita">Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica</span>
+copyright = Copyright \u00A9 2020 - <span class="negrita">Vicepresidencia Tercera del Gobierno - Ministerio de Asuntos Econ\u00F3micos y Transformaci\u00F3n Digital</span>
 
 cuenta.cliente.duplicada = Cuenta Cliente ya existente.
 
@@ -1305,6 +1306,7 @@ modality.fail = Falla
 modality.pass = Pasa
 
 modificar.categoria                                = Modificar Segmento
+modificar.categoria.clave                          = Clave:
 modificar.categoria.editar.termino.categoria.alt   = Editar T\u00E9rmino Categor\u00EDa
 modificar.categoria.eliminar.termino.categoria.alt = Eliminar T\u00E9rmino Categor\u00EDa
 modificar.categoria.nombre                         = Nombre:
@@ -2864,24 +2866,24 @@ semillas.observatorio.title = Asociar Semillas a Observatorio
 send.numHilos    = N\u00FAmero de hilos
 send.numRastreos = N\u00FAmero de rastreos
 
-servicio.diagnostico.fecha.fin                      = Fecha fin (incluida)
-servicio.diagnostico.fecha.inicio                   = Fecha inicio (incluida)
-servicio.diagnostico.fecha.legend                   = Rango de fechas de exportaci\u00F3n
-servicio.diagnostico.title                          = Servicio de Diagn\u00F3stico
-servicio.diagnostirco.estadisticas.amplitud         = Amplitud
-servicio.diagnostirco.estadisticas.avg              = Tiempo medio de los an\u00E1lisis
-servicio.diagnostirco.estadisticas.directorio       = En directorio
-servicio.diagnostirco.estadisticas.email            = Email
-servicio.diagnostirco.estadisticas.encurso.info     = Se muestran los an\u00E1lisis en estado "Lanzado" del d\u00EDa actual
-servicio.diagnostirco.estadisticas.encurso.title    = An\u00E1lisis en curso
-servicio.diagnostirco.estadisticas.estado           = Estado
-servicio.diagnostirco.estadisticas.informe          = Informe
-servicio.diagnostirco.estadisticas.profundidad      = Profundidad
-servicio.diagnostirco.estadisticas.resultados.info  = El tipo de portal se indicar\u00E1 si la URL analizada en el servicio de diagn\u00F3stico coincide con alguna de las semillas almacenadas en base de datos. En caso contrario, se indicar\u00E1 como "Otros"
-servicio.diagnostirco.estadisticas.resultados.title = Resultados de la b\u00FAsqueda
-servicio.diagnostirco.estadisticas.tipo             = Tipo
-servicio.diagnostirco.estadisticas.url              = URL
-servicio.diagnostirco.estadisticas.usuario          = Usuario
+servicio.diagnostico.estadisticas.amplitud         = Amplitud
+servicio.diagnostico.estadisticas.avg              = Tiempo medio de los an\u00E1lisis
+servicio.diagnostico.estadisticas.directorio       = En directorio
+servicio.diagnostico.estadisticas.email            = Email
+servicio.diagnostico.estadisticas.encurso.info     = Se muestran los an\u00E1lisis en estado "Lanzado" del d\u00EDa actual
+servicio.diagnostico.estadisticas.encurso.title    = An\u00E1lisis en curso
+servicio.diagnostico.estadisticas.estado           = Estado
+servicio.diagnostico.estadisticas.informe          = Informe
+servicio.diagnostico.estadisticas.profundidad      = Profundidad
+servicio.diagnostico.estadisticas.resultados.info  = El tipo de portal se indicar\u00E1 si la URL analizada en el servicio de diagn\u00F3stico coincide con alguna de las semillas almacenadas en base de datos. En caso contrario, se indicar\u00E1 como "Otros"
+servicio.diagnostico.estadisticas.resultados.title = Resultados de la b\u00FAsqueda
+servicio.diagnostico.estadisticas.tipo             = Tipo
+servicio.diagnostico.estadisticas.url              = URL
+servicio.diagnostico.estadisticas.usuario          = Usuario
+servicio.diagnostico.fecha.fin                     = Fecha fin (incluida)
+servicio.diagnostico.fecha.inicio                  = Fecha inicio (incluida)
+servicio.diagnostico.fecha.legend                  = Rango de fechas de exportaci\u00F3n
+servicio.diagnostico.title                         = Servicio de Diagn\u00F3stico
 
 sesion.activa          = Se ha producido otra sesi\u00F3n con su usuario.
 sesion.duplicadaconfig = Se ha producido otra sesi\u00F3n con su usuario configurador de su cartucho.
