--- a/motor-js/nginx/reverse.conf
+++ b/motor-js/nginx/reverse.conf
@@ -42,6 +42,13 @@ server {
 		if ($prerender = 0) {
 			proxy_pass $arg_url;			
         }
+
+		proxy_buffer_size          128k;
+    	proxy_buffers              4 256k;
+    	proxy_busy_buffers_size    256k;
+
+		fastcgi_buffers 16 16k; 
+		fastcgi_buffer_size 32k;		
     }
  
 }
@@ -88,6 +95,13 @@ server {
 		if ($prerender = 0) {
 			proxy_pass https://$host$request_uri?;
         }
+
+		proxy_buffer_size          128k;
+    	proxy_buffers              4 256k;
+    	proxy_busy_buffers_size    256k;
+
+		fastcgi_buffers 16 16k; 
+		fastcgi_buffer_size 32k;
     }
  
 }
