Add new field key to comments to seeds
Modify tags export/import on seed to separate tags by clasification


Former-commit-id: 9cc2feeea100a33f3e2364a892e6cb08ee4c38f6

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -1484,6 +1484,7 @@ nueva.semilla.observatorio.eliminada       = Eliminada
 nueva.semilla.observatorio.etiqueta        = Etiqueta
 nueva.semilla.observatorio.in.directory    = Seguir solo enlaces del directorio:
 nueva.semilla.observatorio.nombre          = Nombre Semilla
+nueva.semilla.observatorio.observaciones   = Observaciones\n
 nueva.semilla.observatorio.url             = URL
 #Informaci\u00F3nNueva Semilla
 nueva.semilla.webs                         = Nueva Semilla
