--- a/motor-js/docker-compose.yml
+++ b/motor-js/docker-compose.yml
@@ -20,7 +20,8 @@ services:
       container_name: oaw_proxy   
 
     nginx:
-      image: nginx:1.13.8-alpine      
+      #image: nginx:1.13.8-alpine      
+      image: nginx:1.17.9-alpine      
       volumes:
         - ./nginx/reverse.conf:/etc/nginx/conf.d/default.conf
         - ./nginx/certs/server.crt:/etc/nginx/ssl/server.crt
