Async agregate report generation (only new cartdiges)
Fix statitcs SD query


Former-commit-id: 1d30a20bf961afc4bb09d32ab60dce98b2f636f1

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -652,9 +652,11 @@ first.level.incidents.fulltext  = Incidencias de Prioridad 1
 formulario.certificados.host = Host (sin protocolo)
 formulario.certificados.port = Puerto
 
-generar.informes.observatorio.aviso_correo  = Se enviar\u00E1 un aviso al correo electr\u00F3nico {0} cuando finalice el proceso.
-generar.informes.observatorio.tiempo_espera = El proceso de generaci\u00F3n de todos los informes durar\u00E1 aproximadamente {0} minutos.
-generar.informes.observatorio.title         = Generar informes PDFs del observatorio
+generar.informe.agregado.observatorio.title          = Generaci\u00F3n de informe agregado
+generar.informes.observatorio.aviso_correo           = Se enviar\u00E1 un aviso al correo electr\u00F3nico {0} cuando finalice el proceso.
+generar.informes.observatorio.tiempo_espera          = El proceso de generaci\u00F3n de todos los informes durar\u00E1 aproximadamente {0} minutos.
+generar.informes.observatorio.tiempo_espera.agregado = El proceso de generaci\u00F3n del informe agregado tardar\u00E1 varios minutos.
+generar.informes.observatorio.title                  = Generar informes PDFs del observatorio
 
 gestion.certificado                         = Gesti\u00F3n de Certificados
 gestion.complejidades.observatorio          = Gesti\u00F3n de Complejidades del Observatorio
